# babytc

./: README.md  babytc.cabal
app/: Main.hs
src/: Lib.hs
test/: Spec.hs
