name:                babytc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/babytc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -O0
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , either
                     , mtl
                     , recursion-schemes
                     , text
                     , unification-fd
  default-extensions:  DeriveFunctor
                     , DeriveTraversable
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RankNTypes
                     , StandaloneDeriving
                     , TupleSections
                     , ScopedTypeVariables
  default-language:    Haskell2010

executable babytc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O0
  build-depends:       base
                     , babytc
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , GADTs

test-suite babytc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , babytc
                     , tasty
                     , tasty-hunit
                     , unification-fd
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O0
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , FlexibleInstances
                     , GADTs
                     , StandaloneDeriving

source-repository head
  type:     git
  location: https://github.com/githubuser/babytc
